adds gulp/sass capability, and adds subject field and client-side message to contact form

--- a/public/views/includes/sign-up.jade
+++ b/public/views/includes/sign-up.jade
@@ -29,7 +29,7 @@
       p6 Example: john.smith@gmail.com
     div
       label(for="newUserEmail2") Alternate E-Mail Address
-      input(type="text" id="newUserEmail2" ng-model="newUser.email2" placeholder="Alternate E-Mail")
+      input(type="email" id="newUserEmail2" ng-model="newUser.email2" placeholder="Alternate E-Mail")
       p6 Example: johnnyrocket@yahoo.com
     div
       label(for="newUserOffPhone") Office Phone Number
