--- a/public/views/includes/contact.jade
+++ b/public/views/includes/contact.jade
@@ -1,12 +1,17 @@
 h4 Contact Us
 form(action="")
   div
-    label(for="contactName")
+    label(for="contactName") Name
     input(type="text" id="contactName" ng-model="contact.name")
   div
     label(for="contactEmail") E-Mail
-    input(type="text" id="contactEmail" ng-model="contact.email")
+    input(type="email" id="contactEmail" ng-model="contact.email")
+  div
+    label(for="contactSubject") Subject
+    input(type="text" id="contactSubject" ng-model="contact.subject")
   div
     label(for="contactMessage") Message
     textarea(id="contactMessage" ng-model="contact.message")
   button(type="button" ng-click="sendMail()") Send Message
+  
+p.message(ng-if="showMessage") {{showMessage}}
