adds footer, and new contact form information

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -36,4 +36,7 @@ html(lang="en" ng-app="QuariusApp")
         
       .resources(ng-show="showPage === 3")
         h4 Resources
+    
+    footer
+      p &copy;2016 Quarius & Serval Ventures
           
