--- a/public/views/includes/contact.jade
+++ b/public/views/includes/contact.jade
@@ -7,6 +7,13 @@ form(action="")
     label(for="contactEmail") E-Mail
     input(type="email" id="contactEmail" ng-model="contact.email")
   div
+    label(for="contactTopic") Topic
+    select(id="contactTopic" ng-model="contact.topic" required)
+      option(value="Product Question") Product Question
+      option(value="Help Requests") Help Requests
+      option(value="Suggestions") Suggestions
+      option(value="Other") Other
+  div
     label(for="contactSubject") Subject
     input(type="text" id="contactSubject" ng-model="contact.subject")
   div
