--- a/public/views/includes/about.jade
+++ b/public/views/includes/about.jade
@@ -12,14 +12,14 @@ div.team
   h5 Our Team
   .row
     .col-md-4
-      p image here
+      img(src="http://www.fillmurray.com/140/200", alt="fill murray")
       h6 name
       p bio
     .col-md-4
-      p image here
+      img(src="http://www.fillmurray.com/140/200", alt="fill murray")
       h6 name
       p bio
     .col-md-4
-      p image here
+      img(src="http://www.fillmurray.com/140/200", alt="fill murray")
       h6 name
       p bio
