--- a/public/views/includes/head.jade
+++ b/public/views/includes/head.jade
@@ -9,4 +9,5 @@ script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-rout
 script(src="/js/main.js")
 script(src="./js/controllers/usersController.js")
 script(src="./js/controllers/sendMailController.js")
+script(src="./js/controllers/testController.js")
 title Quarius
