adds ability to save sample quiz results and info to db

--- a/public/views/includes/4qtest.jade
+++ b/public/views/includes/4qtest.jade
@@ -1,4 +1,11 @@
 h3 Sample 4 Q Test
+p We'd love to hear from you! Your information will not be shared etc... Please provide your name and e-mail so we can learn more about how to develop our product...
+//- This form does not work yet
+form
+  label(for="sampleName") Name
+  input(type="text" id="sampleName" ng-model="sample.name" placeholder="Name")
+  label(for="sampleEmail") E-Mail
+  input(type="email" id="sampleEmail" ng-model="sample.email" placeholder="Email")
 form
   h4 At least 51% of the time, you tend to:
   div
@@ -19,7 +26,8 @@ form
   div
     label() Stay organized and complete projects
       input(type="radio" value="1" name="q4" ng-model="quiz.q4")
-    label() Juggle many project
+    label() Juggle many projects
       input(type="radio" value="2" name="q4" ng-model="quiz.q4")
-  button(type="submit" ng-click="clickMe()") Click Me
+  button(type="submit" ng-click="submit4q()") Click Me
   p.test-error(ng-if="fourQerr") {{fourQerr}}
+  p.test-4-results(ng-if="fourQresults") {{fourQresults}}
