--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -39,5 +39,9 @@ html(lang="en" ng-app="QuariusApp")
         include includes/resources
     
     footer
-      p &copy;2016 Quarius & Serval Ventures
+      .row
+        .col-md-6
+          p &copy;2016 Quarius & Serval Ventures
+        .col-md-6
+          p Terms of Use & Privacy
           
