--- a/public/views/includes/home.jade
+++ b/public/views/includes/home.jade
@@ -1,19 +1,59 @@
-h2(class="tagline") ...I See Your True Colors... tagline here
+h2(class="tagline") ...Tagline here
 
-div
+//- This may never exist
+//- img(class="")
+
+div(ng-show="!currentUser")
   h3 Discover Your True Colors
   h5 Managing a diverse group can be challenging
-  p Take this quick 5-minute color quiz to gain insight into your own color personality, and share it with your team to find out more about how you can strengthen your work relationships and improve understanding of your role on the team.
+  p Take a quick quiz to gain insight into your own color personality, and share it with your team to find out more about how you can strengthen your work relationships and improve understanding of your role on the team.
+  a(ng-click="fourQquiz = true" ng-show="!fourQquiz") Four Question Quiz
+  a(ng-click="twelveQquiz = true" ng-show="!twelveQquiz") Twelve Question Quiz
+  //- .color-description
+  //-   .row
+  //-     .col-md-12
+  //-       h3 
+  //-   .row
+  //-     .col-md-3(ng-repeat="color in colors" class="color-box-{{color.name}}")
+  //-       h4 {{color.icon}} {{color.name}}
+  //-         ul
+  //-           li(ng-repeat="quality in color.qualities") {{quality}}
   
-  .color-description
-    .row
-      .col-md-12
-        h3 
-    .row
-      .col-md-3(ng-repeat="color in colors" class="color-box-{{color.name}}")
-        h4 {{color.icon}} {{color.name}}
-          ul
-            li(ng-repeat="quality in color.qualities") {{quality}}
-  
-  .fourQtest(ng-show="!currentUser" ng-controller="TestController")
+  .fourQtest(ng-show="fourQquiz" ng-controller="TestController")
     include 4qtest
+
+div(ng-show="currentUser")
+  h3 Hi {{currentUser.firstname}}
+  h4(ng-click="editPersonal = true") Edit Personal Information?
+  .edit-personal-info(ng-if="editPersonal")
+    form(ng-submit="editAccount")
+      div.row
+        div.col-md-3
+          label(for="newUserFirstName") First Name
+          input(type="text" id="newUserFirstName" ng-model="currentUser.firstname" placeholder="First Name" required)
+          p6 Example: John
+        div.col-md-3
+          label(for="newUserLastName") Last Name
+          input(type="text" id="newUserLastName" ng-model="currentUser.lastname" placeholder="Last Name" required)
+          p6 Example: Smith
+        div.col-md-3
+          label(for="newUserEmail1") E-Mail Address
+          input(type="email" id="newUserEmail1" ng-model="currentUser.email1" placeholder="E-Mail" required)
+          p6 Example: john.smith@gmail.com
+      
+  //- 
+  //- div(ng-if="!currentUser.primaryColor" ng-show="!fourQquiz")
+  //-   h4 You haven't taken our tests yet... click below to start
+  //-   a(ng-click="fourQquiz = true") Four Question Quiz
+  
+  
+  
+  
+
+
+
+
+
+
+
+//-
