adds placeholder image and makes test work for new users and current users and displays result on profile

--- a/public/scss/application.scss
+++ b/public/scss/application.scss
@@ -112,6 +112,10 @@ input[type="text"]#signPassword {
 
 /******** MAIN CONTAINER ********/
 
+.demo-anim {
+  max-width: 20%;
+}
+
 .container {
   margin: 12% auto 3% auto;
   min-height: 69vh;
