--- a/public/views/includes/4qtest.jade
+++ b/public/views/includes/4qtest.jade
@@ -1,6 +1,6 @@
-h3 Sample 4 Q Test
-p We'd love to hear from you! Your information will not be shared etc... Please provide your name and e-mail so we can learn more about how to develop our product...
-form
+h3 4 Q Test
+p(ng-show="!currentUser") We'd love to hear from you! Your information will not be shared etc... Please provide your name and e-mail so we can learn more about how to develop our product...
+form(ng-show="!currentUser")
   label(for="sampleName") Name
   input(type="text" id="sampleName" ng-model="sample.name" placeholder="Name")
   label(for="sampleEmail") E-Mail
